--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.mortar:mortar:0.17'
-    compile 'com.squareup.flow:flow:0.8'
+    compile 'com.squareup.flow:flow:0.9'
+    compile 'com.squareup.flow:flow-path:0.9'
     compile 'com.squareup.dagger:dagger:1.2.2'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 
