--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 /*
  *
  *
@@ -19,10 +18,19 @@
  *  *
  *
  */
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
 
 apply plugin: 'com.android.application'
 
+
+
+
 android {
+
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
 
@@ -45,11 +53,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:recyclerview-v7:22.0.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.mortar:mortar:0.17'
-    compile 'com.squareup.flow:flow:0.9'
-    compile 'com.squareup.flow:flow-path:0.9'
-    compile 'com.squareup.dagger:dagger:1.2.2'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
 }
