--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="marcosambrosi.movieit" >
+    package="marcosambrosi.mmovies" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name=".MoviesApplication">
         <activity
             android:name="marcosambrosi.mmovies.activity.MainActivity"
             android:label="@string/app_name" >
