--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~
   ~ /*
   ~  *
@@ -18,27 +17,31 @@
   ~  *  * limitations under the License.
   ~  *
   ~  */
-  -->
-
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="marcosambrosi.mmovies" >
+    package="marcosambrosi.mmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MoviesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:name=".MoviesApplication">
+        android:theme="@style/AppTheme">
         <activity
-            android:name="marcosambrosi.mmovies.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.MovieDetailActivity"
+            android:label="@string/title_activity_movie_detail"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
