Implemented palette on detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity
             android:name=".activity.MovieDetailActivity"
             android:label="@string/title_activity_movie_detail"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme.TransparentStatusBar"></activity>
     </application>
 
 </manifest>
