--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,6 +42,7 @@
         <activity
             android:name=".activity.MovieDetailActivity"
             android:label="@string/title_activity_movie_detail"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.TransparentStatusBar"></activity>
     </application>
 
